# chat-example

./: CMakeLists.txt  LICENSE
extlibs/: CMakeLists.txt
include/chat-example/: chatclient.h  chatserver.h  format.hh  packet.hh  signal.hh
include/chat_example/: chatclient.h  chatserver.h  databaseadapter.hh  format.hh  packet.hh  signal.hh
src/: CMakeLists.txt  chatclient.cc  chatserver.cc  format.cc  main.cc
test/: CMakeLists.txt  scope_exit.hh  test-chatclient.cc  test-chatserver.cc  test-packet.cc
